# application-level-ondevice-ai-feasibility

./: .gitignore  Data Table - Sheet1.csv  README.md  bart_sanity_test.py  benchmark_bart_onnx_fp32.csv  benchmark_bart_onnx_fp32.py  benchmark_bart_onnx_int8.csv  benchmark_bart_onnx_int8.py  benchmark_bart_pytorch_fp32.csv  benchmark_bart_pytorch_fp32.py  benchmark_distilbart_onnx_fp32.csv  benchmark_distilbart_onnx_fp32.py  benchmark_distilbart_onnx_int8.csv  benchmark_distilbart_onnx_int8.py  benchmark_distilbart_pytorch_fp32.csv  benchmark_distilbart_pytorch_fp32.py  benchmark_t5.py  benchmark_t5_fp32.py  benchmark_t5_onnx_fp32.csv  benchmark_t5_onnx_int8.csv  benchmark_t5_pytorch_fp32.csv  benchmark_t5_pytorch_fp32.py  detailed_results_by_length.csv  distilbart_sanity_test.py  export_bart_onnx.py  export_distilbart_onnx.py  final_comparison_table.csv  generate_final_table.py  generate_mobile_figures.py  generate_paper_figures.py  generate_results.py  prepare_dataset.py  quantize_bart_onnx.py  quantize_distilbart_onnx.py  quantize_onnx.py  run_onnx_t5.py  test_inference.py  test_t5.py
android_application/: README.md
android_application/app/src/main/cpp/: CMakeLists.txt  tokenizer_bridge.cpp
dataset/: long_1.txt  long_10.txt  long_11.txt  long_12.txt  long_13.txt  long_14.txt  long_15.txt  long_16.txt  long_17.txt  long_18.txt  long_19.txt  long_2.txt  long_20.txt  long_21.txt  long_22.txt  long_23.txt  long_24.txt  long_25.txt  long_26.txt  long_27.txt  long_28.txt  long_29.txt  long_3.txt  long_30.txt  long_31.txt  long_32.txt  long_33.txt  long_34.txt  long_4.txt  (+91 more)
(+10 files in other folders)
